Özellik: SEO iyileştirmeleri ve site haritası eklendi

--- a/pages/gizlilik-politikasi.html
+++ b/pages/gizlilik-politikasi.html
@@ -12,9 +12,10 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı Döviz Kuru sitesinin gizlilik politikası ve kullanım koşulları. Veri toplama, çerez kullanımı ve sorumluluk reddi hakkında bilgiler.">
+    <meta name="description" content="Canlı Döviz Kuru (dovizkurucanli.com) web sitesinin gizlilik politikası ve kullanıcı sözleşmesi. Veri toplama, çerez (cookie) kullanımı, sorumluluk reddi ve kullanım koşulları hakkında detaylı bilgiler.">
+    <meta name="keywords" content="gizlilik politikası, kullanıcı sözleşmesi, kullanım koşulları, veri güvenliği, çerez politikası, sorumluluk reddi, canlı döviz kuru, dovizkurucanli.com">
     <meta name="robots" content="index, follow">
-    <title>Gizlilik Politikası - Canlı Döviz Kuru</title>
+    <title>Gizlilik Politikası ve Kullanım Koşulları - Canlı Döviz Kuru</title>
     <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
