--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -12,12 +12,12 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı Döviz Kuru hakkında bilgi edinin. Anlık döviz kurları, kripto para fiyatları ve finansal araçlar sunan platformumuzun misyonu ve hizmetleri.">
-    <meta name="keywords" content="canlı döviz kuru, hakkımızda, finans platformu, döviz bilgileri, kripto bilgileri">
+    <meta name="description" content="Canlı Döviz Kuru platformunun misyonu, vizyonu ve sunduğu hizmetler hakkında detaylı bilgi edinin. Anlık döviz kurları, kripto para fiyatları ve finansal araçlar için güvenilir adresiniz.">
+    <meta name="keywords" content="hakkımızda, canlı döviz kuru, misyon, vizyon, finansal hizmetler, döviz, kripto para, anlık kurlar">
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
-    <title>Hakkımızda - Canlı Döviz Kuru | Anlık Döviz ve Kripto Para Bilgileri</title>
+    <title>Hakkımızda - Canlı Döviz Kuru | Misyonumuz ve Finansal Hizmetlerimiz</title>
     <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
