--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı Döviz Kuru - Anlık döviz kurları, dolar kaç tl, euro kaç tl, güncel döviz çevirici ve kripto para bilgileri.">
-    <meta name="keywords" content="canlı döviz kuru, anlık döviz kuru, dolar kaç tl, euro kaç tl, bitcoin kaç tl, kripto para piyasa">
+    <meta name="description" content="En güncel canlı döviz kurları, anlık dolar, euro, sterlin fiyatları ve 100'den fazla kripto para değerini takip edin. Hızlı ve kolay döviz çevirici ve kripto para hesaplama aracı.">
+    <meta name="keywords" content="canlı döviz, anlık döviz, dolar kuru, euro kuru, bitcoin fiyatı, ethereum fiyatı, kripto para çevirici, döviz hesaplama, güncel kur">
     <meta name="author" content="Finans Platformu">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://candovizkuru.com/">
-    <meta property="og:title" content="Canlı Döviz Kuru - Anlık Döviz ve Kripto Para Bilgileri">
-    <meta property="og:description" content="Güncel döviz kurları, kripto para çevirici ve anlık finans bilgileri">
+    <meta property="og:title" content="Canlı Döviz Kuru | Anlık Dolar, Euro, Kripto Fiyatları ve Çevirici">
+    <meta property="og:description" content="En güncel canlı döviz kurları, anlık dolar, euro, sterlin fiyatları ve 100'den fazla kripto para değerini takip edin. Hızlı ve kolay döviz çevirici ve kripto para hesaplama aracı.">
     <meta property="og:image" content="https://candovizkuru.com/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://candovizkuru.com/">
-    <meta property="twitter:title" content="Canlı Döviz Kuru">
-    <meta property="twitter:description" content="Güncel döviz kurları, kripto para çevirici ve anlık finans bilgileri">
+    <meta property="twitter:title" content="Canlı Döviz Kuru | Anlık Dolar, Euro, Kripto Fiyatları ve Çevirici">
+    <meta property="twitter:description" content="En güncel canlı döviz kurları, anlık dolar, euro, sterlin fiyatları ve 100'den fazla kripto para değerini takip edin. Hızlı ve kolay döviz çevirici ve kripto para hesaplama aracı.">
     <meta property="twitter:image" content="https://candovizkuru.com/twitter-image.jpg">
 
     <!-- Canonical URL -->
@@ -37,7 +37,7 @@
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
-    <title>Canlı Döviz Kuru - Anlık Döviz ve Kripto Para Bilgileri</title>
+    <title>Canlı Döviz Kuru | Anlık Dolar, Euro, Kripto Fiyatları ve Çevirici</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
