--- a/pages/blog.html
+++ b/pages/blog.html
@@ -11,9 +11,9 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı Döviz Kuru Blog - Finans, döviz ve kripto paralar hakkında güncel yazılar.">
-    <meta name="keywords" content="finans blog, döviz blog, kripto blog, ekonomi yazıları">
-    <title>Blog - Canlı Döviz Kuru</title>
+    <meta name="description" content="Canlı Döviz Kuru blogunda finans, ekonomi, döviz kurları ve kripto paralar hakkında en güncel analizleri, rehberleri ve piyasa yorumlarını okuyun.">
+    <meta name="keywords" content="finans blogu, ekonomi blogu, döviz kuru analizleri, kripto para haberleri, yatırım tavsiyeleri, finansal okuryazarlık, güncel ekonomi, piyasa yorumları">
+    <title>Finans Blogu | Döviz Kurları, Kripto Paralar ve Ekonomi Yazıları - Canlı Döviz Kuru</title>
     <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
