--- a/pages/doviz-cevirici.html
+++ b/pages/doviz-cevirici.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Döviz Çevirici - Canlı Döviz Kuru</title>
-    <meta name="description" content="Anlık döviz kurları ile 150'den fazla para birimi arasında hızlı ve kolay çeviri yapın. Güncel dolar, euro ve diğer kurları kullanarak hesaplama yapın.">
-    <meta name="keywords" content="döviz çevirici, kur çevirici, para çevirici, anlık kur, dolar çevir, euro çevir, canlı döviz kuru">
+    <title>Hızlı Döviz Çevirici | Anlık Kur Hesaplama - Dolar, Euro, TL</title>
+    <meta name="description" content="En güncel kurlarla Dolar, Euro, Sterlin ve 150+ fazla para birimi arasında anında çeviri yapın. Canlı Döviz Kuru ile güvenilir ve hızlı döviz hesaplama aracı.">
+    <meta name="keywords" content="döviz çevirici, anlık kur çevirici, para birimi hesaplama, dolar tl çevir, euro tl çevir, güncel döviz kurları, online çevirici, kur hesapla">
     <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
