--- a/pages/kripto-cevirici.html
+++ b/pages/kripto-cevirici.html
@@ -12,12 +12,12 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anlık kripto para fiyatları ile Bitcoin, Ethereum ve 100'den fazla altcoin arasında çeviri yapın. Güncel BTC, ETH ve diğer kripto değerlerini kullanarak hesaplama yapın.">
-    <meta name="keywords" content="kripto çevirici, kripto para çevirici, bitcoin çevirici, ethereum çevirici, altcoin çevirici, anlık kripto fiyatları, canlı döviz kuru">
+    <meta name="description" content="Bitcoin (BTC), Ethereum (ETH) ve 100+ altcoin arasında anlık fiyatlarla çeviri yapın. Canlı Döviz Kuru kripto çeviricisi ile güncel değerleri kolayca hesaplayın.">
+    <meta name="keywords" content="kripto para çevirici, bitcoin hesaplama, ethereum hesaplama, altcoin çevirici, anlık kripto kurları, btc çevir, eth çevir, kripto fiyatları, canlı kripto">
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
-    <title>Kripto Para Çevirici - Canlı Döviz Kuru | Anlık Kripto Para Bilgileri</title>
+    <title>Anlık Kripto Para Çevirici | Bitcoin, Ethereum, Altcoin Hesaplama</title>
     <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
