--- a/pages/kripto-piyasa.html
+++ b/pages/kripto-piyasa.html
@@ -12,12 +12,12 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı kripto para piyasası verileri. Bitcoin, Ethereum ve diğer altcoinlerin anlık fiyatlarını, 24 saatlik değişimlerini, hacimlerini ve piyasa değerlerini takip edin.">
-    <meta name="keywords" content="kripto para piyasası, canlı kripto fiyatları, bitcoin fiyatı, ethereum fiyatı, altcoin fiyatları, kripto piyasa değeri, canlı döviz kuru">
+    <meta name="description" content="Bitcoin (BTC), Ethereum (ETH) ve yüzlerce altcoin için anlık fiyatlar, 24 saatlik değişim, işlem hacmi ve piyasa değeri verilerini canlı takip edin. Güncel kripto para piyasası analizleri burada.">
+    <meta name="keywords" content="kripto para piyasası, canlı kripto, anlık bitcoin fiyatı, ethereum kuru, altcoin market cap, kripto para borsası, güncel coin fiyatları, kripto analiz">
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
-    <title>Kripto Para Piyasası - Canlı Döviz Kuru | Anlık Kripto Para Bilgileri</title>
+    <title>Canlı Kripto Para Piyasası | Anlık Bitcoin, Ethereum, Altcoin Fiyatları</title>
     <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
